[package]
name = "ip_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.20.0"
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }

[workspace.metadata.cross.target.x86_64-apple-darwin]
image = "zeyanlin/ip_rs:v0.1.0"
