[package]
name = "ip_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.22.0"
serde_json = "1.0.134"
tokio = { version = "1.43.1", features = ["full"] }

[workspace.metadata.cross.target.all]
image = "zeyanlin/ip_rs:v0.1.0"

[dev-dependencies]
httpmock = "0.7.0"
once_cell = "1.9"
tokio = { version = "1.43.1", features = ["full"] }
